Cambaindo gradientes de equipo.html e index.html

--- a/Marcas/equip.css
+++ b/Marcas/equip.css
@@ -4,7 +4,7 @@ body {
 }
 
 section {
-    background: linear-gradient(to top, #7b8a853a, #89e2c43a);
+    background: linear-gradient(to top, #aeaeae, #dbe1cc);
 }
 
 section > ul {
