--- a/Marcas/Reports/bank_wins.xml
+++ b/Marcas/Reports/bank_wins.xml
@@ -2,15 +2,15 @@
 <Resultados>
   <Fila>
     <ID-Game>1</ID-Game>
-    <Rounds-Won>3</Rounds-Won>
+    <Rounds-Won>5</Rounds-Won>
   </Fila>
   <Fila>
     <ID-Game>2</ID-Game>
-    <Rounds-Won>4</Rounds-Won>
+    <Rounds-Won>2</Rounds-Won>
   </Fila>
   <Fila>
     <ID-Game>3</ID-Game>
-    <Rounds-Won>3</Rounds-Won>
+    <Rounds-Won>2</Rounds-Won>
   </Fila>
   <Fila>
     <ID-Game>4</ID-Game>
@@ -18,10 +18,30 @@
   </Fila>
   <Fila>
     <ID-Game>5</ID-Game>
-    <Rounds-Won>1</Rounds-Won>
+    <Rounds-Won>4</Rounds-Won>
   </Fila>
   <Fila>
     <ID-Game>6</ID-Game>
-    <Rounds-Won>3</Rounds-Won>
+    <Rounds-Won>4</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>7</ID-Game>
+    <Rounds-Won>4</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>8</ID-Game>
+    <Rounds-Won>5</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>9</ID-Game>
+    <Rounds-Won>5</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>10</ID-Game>
+    <Rounds-Won>7</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>11</ID-Game>
+    <Rounds-Won>1</Rounds-Won>
   </Fila>
 </Resultados>
