--- a/Marcas/Reports/game_max_bet_player.xml
+++ b/Marcas/Reports/game_max_bet_player.xml
@@ -2,32 +2,52 @@
 <Resultados>
   <Fila>
     <ID-Game>1</ID-Game>
-    <ID-Player>44448888D</ID-Player>
-    <Max-Bet>13</Max-Bet>
+    <ID-Player>14427668Q</ID-Player>
+    <Max-Bet>18</Max-Bet>
   </Fila>
   <Fila>
     <ID-Game>2</ID-Game>
     <ID-Player>33337777C</ID-Player>
-    <Max-Bet>10</Max-Bet>
+    <Max-Bet>15</Max-Bet>
   </Fila>
   <Fila>
     <ID-Game>3</ID-Game>
-    <ID-Player>22226666B</ID-Player>
-    <Max-Bet>10</Max-Bet>
+    <ID-Player>54447114Q</ID-Player>
+    <Max-Bet>8</Max-Bet>
   </Fila>
   <Fila>
     <ID-Game>4</ID-Game>
-    <ID-Player>33337777C</ID-Player>
-    <Max-Bet>14</Max-Bet>
+    <ID-Player>41831270S</ID-Player>
+    <Max-Bet>19</Max-Bet>
   </Fila>
   <Fila>
     <ID-Game>5</ID-Game>
-    <ID-Player>44448888D</ID-Player>
-    <Max-Bet>5</Max-Bet>
+    <ID-Player>11115555A</ID-Player>
+    <Max-Bet>11</Max-Bet>
   </Fila>
   <Fila>
     <ID-Game>6</ID-Game>
-    <ID-Player>41831270S</ID-Player>
-    <Max-Bet>15</Max-Bet>
+    <ID-Player>53581599M</ID-Player>
+    <Max-Bet>17</Max-Bet>
+  </Fila>
+  <Fila>
+    <ID-Game>7</ID-Game>
+    <ID-Player>44448888D</ID-Player>
+    <Max-Bet>18</Max-Bet>
+  </Fila>
+  <Fila>
+    <ID-Game>8</ID-Game>
+    <ID-Player>33337777C</ID-Player>
+    <Max-Bet>38</Max-Bet>
+  </Fila>
+  <Fila>
+    <ID-Game>9</ID-Game>
+    <ID-Player>53581599M</ID-Player>
+    <Max-Bet>39</Max-Bet>
+  </Fila>
+  <Fila>
+    <ID-Game>10</ID-Game>
+    <ID-Player>09634229M</ID-Player>
+    <Max-Bet>13</Max-Bet>
   </Fila>
 </Resultados>
