--- a/Marcas/Reports/bank_wins_distinguish_user.xml
+++ b/Marcas/Reports/bank_wins_distinguish_user.xml
@@ -2,62 +2,112 @@
 <Resultados>
   <Fila>
     <ID-Game>1</ID-Game>
-    <ID-Player>22226666B</ID-Player>
-    <Rounds-Won>0</Rounds-Won>
+    <ID-Player>44448888D</ID-Player>
+    <Rounds-Won>2</Rounds-Won>
   </Fila>
   <Fila>
     <ID-Game>1</ID-Game>
-    <ID-Player>33337777C</ID-Player>
-    <Rounds-Won>1</Rounds-Won>
-  </Fila>
-  <Fila>
-    <ID-Game>1</ID-Game>
-    <ID-Player>44448888D</ID-Player>
-    <Rounds-Won>2</Rounds-Won>
-  </Fila>
-  <Fila>
-    <ID-Game>2</ID-Game>
-    <ID-Player>11115555A</ID-Player>
-    <Rounds-Won>2</Rounds-Won>
-  </Fila>
-  <Fila>
-    <ID-Game>2</ID-Game>
-    <ID-Player>33337777C</ID-Player>
-    <Rounds-Won>2</Rounds-Won>
-  </Fila>
-  <Fila>
-    <ID-Game>3</ID-Game>
-    <ID-Player>11115555A</ID-Player>
-    <Rounds-Won>0</Rounds-Won>
-  </Fila>
-  <Fila>
-    <ID-Game>3</ID-Game>
-    <ID-Player>22226666B</ID-Player>
-    <Rounds-Won>2</Rounds-Won>
-  </Fila>
-  <Fila>
-    <ID-Game>3</ID-Game>
-    <ID-Player>44448888D</ID-Player>
-    <Rounds-Won>1</Rounds-Won>
-  </Fila>
-  <Fila>
-    <ID-Game>4</ID-Game>
-    <ID-Player>33337777C</ID-Player>
-    <Rounds-Won>2</Rounds-Won>
-  </Fila>
-  <Fila>
-    <ID-Game>4</ID-Game>
-    <ID-Player>44448888D</ID-Player>
+    <ID-Player>75045268B</ID-Player>
     <Rounds-Won>3</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>2</ID-Game>
+    <ID-Player>33337777C</ID-Player>
+    <Rounds-Won>1</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>2</ID-Game>
+    <ID-Player>44448888D</ID-Player>
+    <Rounds-Won>1</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>3</ID-Game>
+    <ID-Player>53581599M</ID-Player>
+    <Rounds-Won>2</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>4</ID-Game>
+    <ID-Player>53581599M</ID-Player>
+    <Rounds-Won>5</Rounds-Won>
   </Fila>
   <Fila>
     <ID-Game>5</ID-Game>
+    <ID-Player>11115555A</ID-Player>
+    <Rounds-Won>1</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>5</ID-Game>
+    <ID-Player>44448888D</ID-Player>
+    <Rounds-Won>1</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>5</ID-Game>
+    <ID-Player>90101235J</ID-Player>
+    <Rounds-Won>2</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>6</ID-Game>
+    <ID-Player>09634229M</ID-Player>
+    <Rounds-Won>4</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>7</ID-Game>
+    <ID-Player>33337777C</ID-Player>
+    <Rounds-Won>0</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>7</ID-Game>
+    <ID-Player>44448888D</ID-Player>
+    <Rounds-Won>1</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>7</ID-Game>
+    <ID-Player>90101235J</ID-Player>
+    <Rounds-Won>3</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>8</ID-Game>
     <ID-Player>33337777C</ID-Player>
     <Rounds-Won>1</Rounds-Won>
   </Fila>
   <Fila>
-    <ID-Game>6</ID-Game>
-    <ID-Player>86026754S</ID-Player>
+    <ID-Game>8</ID-Game>
+    <ID-Player>75045268B</ID-Player>
+    <Rounds-Won>4</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>9</ID-Game>
+    <ID-Player>09634229M</ID-Player>
+    <Rounds-Won>1</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>9</ID-Game>
+    <ID-Player>14427668Q</ID-Player>
+    <Rounds-Won>1</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>9</ID-Game>
+    <ID-Player>53581599M</ID-Player>
     <Rounds-Won>3</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>10</ID-Game>
+    <ID-Player>09634229M</ID-Player>
+    <Rounds-Won>4</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>10</ID-Game>
+    <ID-Player>41831270S</ID-Player>
+    <Rounds-Won>3</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>11</ID-Game>
+    <ID-Player>22226666B</ID-Player>
+    <Rounds-Won>0</Rounds-Won>
+  </Fila>
+  <Fila>
+    <ID-Game>11</ID-Game>
+    <ID-Player>75045268B</ID-Player>
+    <Rounds-Won>1</Rounds-Won>
   </Fila>
 </Resultados>
