--- a/Marcas/Reports/last_round_avg_bet.xml
+++ b/Marcas/Reports/last_round_avg_bet.xml
@@ -2,11 +2,11 @@
 <Resultados>
   <Fila>
     <ID-Game>1</ID-Game>
-    <Average-Bet-Of-Last-Round>7.67</Average-Bet-Of-Last-Round>
+    <Average-Bet-Of-Last-Round>6.50</Average-Bet-Of-Last-Round>
   </Fila>
   <Fila>
     <ID-Game>2</ID-Game>
-    <Average-Bet-Of-Last-Round>6.00</Average-Bet-Of-Last-Round>
+    <Average-Bet-Of-Last-Round>9.00</Average-Bet-Of-Last-Round>
   </Fila>
   <Fila>
     <ID-Game>3</ID-Game>
@@ -14,14 +14,30 @@
   </Fila>
   <Fila>
     <ID-Game>4</ID-Game>
-    <Average-Bet-Of-Last-Round>4.00</Average-Bet-Of-Last-Round>
+    <Average-Bet-Of-Last-Round>3.00</Average-Bet-Of-Last-Round>
   </Fila>
   <Fila>
     <ID-Game>5</ID-Game>
-    <Average-Bet-Of-Last-Round>2.50</Average-Bet-Of-Last-Round>
+    <Average-Bet-Of-Last-Round>4.67</Average-Bet-Of-Last-Round>
   </Fila>
   <Fila>
     <ID-Game>6</ID-Game>
-    <Average-Bet-Of-Last-Round>11.50</Average-Bet-Of-Last-Round>
+    <Average-Bet-Of-Last-Round>4.00</Average-Bet-Of-Last-Round>
+  </Fila>
+  <Fila>
+    <ID-Game>7</ID-Game>
+    <Average-Bet-Of-Last-Round>2.00</Average-Bet-Of-Last-Round>
+  </Fila>
+  <Fila>
+    <ID-Game>8</ID-Game>
+    <Average-Bet-Of-Last-Round>7.67</Average-Bet-Of-Last-Round>
+  </Fila>
+  <Fila>
+    <ID-Game>9</ID-Game>
+    <Average-Bet-Of-Last-Round>18.33</Average-Bet-Of-Last-Round>
+  </Fila>
+  <Fila>
+    <ID-Game>10</ID-Game>
+    <Average-Bet-Of-Last-Round>2.00</Average-Bet-Of-Last-Round>
   </Fila>
 </Resultados>
