--- a/Marcas/Reports/pce_won_rounds_avg_bet.xml
+++ b/Marcas/Reports/pce_won_rounds_avg_bet.xml
@@ -2,154 +2,322 @@
 <Resultados>
   <Fila>
     <ID-Game>1</ID-Game>
-    <ID-Player>11115555A</ID-Player>
-    <Rounds>5</Rounds>
-    <Average-Bet>4.600</Average-Bet>
-    <Rounds-Won>0</Rounds-Won>
-    <Win-Percentage>0.000</Win-Percentage>
-  </Fila>
-  <Fila>
-    <ID-Game>1</ID-Game>
-    <ID-Player>22226666B</ID-Player>
-    <Rounds>5</Rounds>
-    <Average-Bet>2.800</Average-Bet>
-    <Rounds-Won>0</Rounds-Won>
-    <Win-Percentage>0.000</Win-Percentage>
-  </Fila>
-  <Fila>
-    <ID-Game>1</ID-Game>
-    <ID-Player>33337777C</ID-Player>
-    <Rounds>5</Rounds>
-    <Average-Bet>4.000</Average-Bet>
-    <Rounds-Won>2</Rounds-Won>
-    <Win-Percentage>40.000</Win-Percentage>
-  </Fila>
-  <Fila>
-    <ID-Game>1</ID-Game>
-    <ID-Player>44448888D</ID-Player>
-    <Rounds>5</Rounds>
-    <Average-Bet>3.800</Average-Bet>
-    <Rounds-Won>3</Rounds-Won>
-    <Win-Percentage>60.000</Win-Percentage>
-  </Fila>
-  <Fila>
-    <ID-Game>2</ID-Game>
-    <ID-Player>11115555A</ID-Player>
-    <Rounds>6</Rounds>
-    <Average-Bet>3.167</Average-Bet>
-    <Rounds-Won>3</Rounds-Won>
-    <Win-Percentage>50.000</Win-Percentage>
-  </Fila>
-  <Fila>
-    <ID-Game>2</ID-Game>
-    <ID-Player>22226666B</ID-Player>
-    <Rounds>6</Rounds>
-    <Average-Bet>4.000</Average-Bet>
-    <Rounds-Won>0</Rounds-Won>
-    <Win-Percentage>0.000</Win-Percentage>
-  </Fila>
-  <Fila>
-    <ID-Game>2</ID-Game>
-    <ID-Player>33337777C</ID-Player>
-    <Rounds>6</Rounds>
-    <Average-Bet>3.833</Average-Bet>
-    <Rounds-Won>3</Rounds-Won>
-    <Win-Percentage>50.000</Win-Percentage>
-  </Fila>
-  <Fila>
-    <ID-Game>3</ID-Game>
-    <ID-Player>11115555A</ID-Player>
-    <Rounds>8</Rounds>
-    <Average-Bet>4.125</Average-Bet>
-    <Rounds-Won>2</Rounds-Won>
-    <Win-Percentage>25.000</Win-Percentage>
-  </Fila>
-  <Fila>
-    <ID-Game>3</ID-Game>
-    <ID-Player>22226666B</ID-Player>
-    <Rounds>8</Rounds>
-    <Average-Bet>3.250</Average-Bet>
-    <Rounds-Won>3</Rounds-Won>
-    <Win-Percentage>37.500</Win-Percentage>
-  </Fila>
-  <Fila>
-    <ID-Game>3</ID-Game>
-    <ID-Player>44448888D</ID-Player>
-    <Rounds>8</Rounds>
-    <Average-Bet>3.250</Average-Bet>
-    <Rounds-Won>3</Rounds-Won>
-    <Win-Percentage>37.500</Win-Percentage>
-  </Fila>
-  <Fila>
-    <ID-Game>4</ID-Game>
-    <ID-Player>11115555A</ID-Player>
+    <ID-Player>09634229M</ID-Player>
     <Rounds>7</Rounds>
-    <Average-Bet>4.286</Average-Bet>
+    <Average-Bet>2.714</Average-Bet>
     <Rounds-Won>1</Rounds-Won>
     <Win-Percentage>14.286</Win-Percentage>
   </Fila>
   <Fila>
-    <ID-Game>4</ID-Game>
-    <ID-Player>33337777C</ID-Player>
+    <ID-Game>1</ID-Game>
+    <ID-Player>14427668Q</ID-Player>
     <Rounds>7</Rounds>
-    <Average-Bet>4.143</Average-Bet>
+    <Average-Bet>5.714</Average-Bet>
+    <Rounds-Won>1</Rounds-Won>
+    <Win-Percentage>14.286</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>1</ID-Game>
+    <ID-Player>44448888D</ID-Player>
+    <Rounds>7</Rounds>
+    <Average-Bet>2.857</Average-Bet>
+    <Rounds-Won>2</Rounds-Won>
+    <Win-Percentage>28.571</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>1</ID-Game>
+    <ID-Player>75045268B</ID-Player>
+    <Rounds>7</Rounds>
+    <Average-Bet>3.571</Average-Bet>
     <Rounds-Won>3</Rounds-Won>
     <Win-Percentage>42.857</Win-Percentage>
   </Fila>
   <Fila>
+    <ID-Game>2</ID-Game>
+    <ID-Player>33337777C</ID-Player>
+    <Rounds>3</Rounds>
+    <Average-Bet>6.667</Average-Bet>
+    <Rounds-Won>1</Rounds-Won>
+    <Win-Percentage>33.333</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>2</ID-Game>
+    <ID-Player>44448888D</ID-Player>
+    <Rounds>3</Rounds>
+    <Average-Bet>3.000</Average-Bet>
+    <Rounds-Won>2</Rounds-Won>
+    <Win-Percentage>66.667</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>3</ID-Game>
+    <ID-Player>22226666B</ID-Player>
+    <Rounds>4</Rounds>
+    <Average-Bet>4.750</Average-Bet>
+    <Rounds-Won>1</Rounds-Won>
+    <Win-Percentage>25.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>3</ID-Game>
+    <ID-Player>53581599M</ID-Player>
+    <Rounds>4</Rounds>
+    <Average-Bet>0.000</Average-Bet>
+    <Rounds-Won>2</Rounds-Won>
+    <Win-Percentage>50.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>3</ID-Game>
+    <ID-Player>54447114Q</ID-Player>
+    <Rounds>4</Rounds>
+    <Average-Bet>5.000</Average-Bet>
+    <Rounds-Won>1</Rounds-Won>
+    <Win-Percentage>25.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>4</ID-Game>
+    <ID-Player>11115555A</ID-Player>
+    <Rounds>9</Rounds>
+    <Average-Bet>4.333</Average-Bet>
+    <Rounds-Won>1</Rounds-Won>
+    <Win-Percentage>11.111</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>4</ID-Game>
+    <ID-Player>41831270S</ID-Player>
+    <Rounds>9</Rounds>
+    <Average-Bet>6.333</Average-Bet>
+    <Rounds-Won>1</Rounds-Won>
+    <Win-Percentage>11.111</Win-Percentage>
+  </Fila>
+  <Fila>
     <ID-Game>4</ID-Game>
     <ID-Player>44448888D</ID-Player>
+    <Rounds>9</Rounds>
+    <Average-Bet>2.444</Average-Bet>
+    <Rounds-Won>0</Rounds-Won>
+    <Win-Percentage>0.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>4</ID-Game>
+    <ID-Player>53581599M</ID-Player>
+    <Rounds>9</Rounds>
+    <Average-Bet>0.000</Average-Bet>
+    <Rounds-Won>5</Rounds-Won>
+    <Win-Percentage>55.556</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>4</ID-Game>
+    <ID-Player>54447114Q</ID-Player>
+    <Rounds>9</Rounds>
+    <Average-Bet>6.222</Average-Bet>
+    <Rounds-Won>2</Rounds-Won>
+    <Win-Percentage>22.222</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>4</ID-Game>
+    <ID-Player>90101235J</ID-Player>
+    <Rounds>9</Rounds>
+    <Average-Bet>2.556</Average-Bet>
+    <Rounds-Won>0</Rounds-Won>
+    <Win-Percentage>0.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>5</ID-Game>
+    <ID-Player>11115555A</ID-Player>
+    <Rounds>6</Rounds>
+    <Average-Bet>6.667</Average-Bet>
+    <Rounds-Won>3</Rounds-Won>
+    <Win-Percentage>50.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>5</ID-Game>
+    <ID-Player>22226666B</ID-Player>
+    <Rounds>6</Rounds>
+    <Average-Bet>4.500</Average-Bet>
+    <Rounds-Won>0</Rounds-Won>
+    <Win-Percentage>0.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>5</ID-Game>
+    <ID-Player>44448888D</ID-Player>
+    <Rounds>6</Rounds>
+    <Average-Bet>3.833</Average-Bet>
+    <Rounds-Won>1</Rounds-Won>
+    <Win-Percentage>16.667</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>5</ID-Game>
+    <ID-Player>90101235J</ID-Player>
+    <Rounds>6</Rounds>
+    <Average-Bet>0.500</Average-Bet>
+    <Rounds-Won>2</Rounds-Won>
+    <Win-Percentage>33.333</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>6</ID-Game>
+    <ID-Player>06471826E</ID-Player>
+    <Rounds>6</Rounds>
+    <Average-Bet>4.167</Average-Bet>
+    <Rounds-Won>0</Rounds-Won>
+    <Win-Percentage>0.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>6</ID-Game>
+    <ID-Player>09634229M</ID-Player>
+    <Rounds>6</Rounds>
+    <Average-Bet>0.000</Average-Bet>
+    <Rounds-Won>4</Rounds-Won>
+    <Win-Percentage>66.667</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>6</ID-Game>
+    <ID-Player>22226666B</ID-Player>
+    <Rounds>6</Rounds>
+    <Average-Bet>6.000</Average-Bet>
+    <Rounds-Won>2</Rounds-Won>
+    <Win-Percentage>33.333</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>6</ID-Game>
+    <ID-Player>33337777C</ID-Player>
+    <Rounds>6</Rounds>
+    <Average-Bet>3.333</Average-Bet>
+    <Rounds-Won>0</Rounds-Won>
+    <Win-Percentage>0.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>6</ID-Game>
+    <ID-Player>53581599M</ID-Player>
+    <Rounds>6</Rounds>
+    <Average-Bet>3.667</Average-Bet>
+    <Rounds-Won>0</Rounds-Won>
+    <Win-Percentage>0.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>7</ID-Game>
+    <ID-Player>33337777C</ID-Player>
+    <Rounds>7</Rounds>
+    <Average-Bet>0.000</Average-Bet>
+    <Rounds-Won>0</Rounds-Won>
+    <Win-Percentage>0.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>7</ID-Game>
+    <ID-Player>44448888D</ID-Player>
+    <Rounds>7</Rounds>
+    <Average-Bet>9.000</Average-Bet>
+    <Rounds-Won>4</Rounds-Won>
+    <Win-Percentage>57.143</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>7</ID-Game>
+    <ID-Player>90101235J</ID-Player>
     <Rounds>7</Rounds>
     <Average-Bet>2.000</Average-Bet>
     <Rounds-Won>3</Rounds-Won>
     <Win-Percentage>42.857</Win-Percentage>
   </Fila>
   <Fila>
-    <ID-Game>5</ID-Game>
-    <ID-Player>22226666B</ID-Player>
-    <Rounds>3</Rounds>
-    <Average-Bet>3.000</Average-Bet>
-    <Rounds-Won>1</Rounds-Won>
-    <Win-Percentage>33.333</Win-Percentage>
-  </Fila>
-  <Fila>
-    <ID-Game>5</ID-Game>
-    <ID-Player>33337777C</ID-Player>
-    <Rounds>3</Rounds>
-    <Average-Bet>0.000</Average-Bet>
-    <Rounds-Won>1</Rounds-Won>
-    <Win-Percentage>33.333</Win-Percentage>
-  </Fila>
-  <Fila>
-    <ID-Game>5</ID-Game>
-    <ID-Player>44448888D</ID-Player>
-    <Rounds>3</Rounds>
-    <Average-Bet>3.667</Average-Bet>
-    <Rounds-Won>1</Rounds-Won>
-    <Win-Percentage>33.333</Win-Percentage>
-  </Fila>
-  <Fila>
-    <ID-Game>6</ID-Game>
+    <ID-Game>8</ID-Game>
     <ID-Player>11115555A</ID-Player>
-    <Rounds>5</Rounds>
-    <Average-Bet>10.000</Average-Bet>
-    <Rounds-Won>2</Rounds-Won>
-    <Win-Percentage>40.000</Win-Percentage>
-  </Fila>
-  <Fila>
-    <ID-Game>6</ID-Game>
-    <ID-Player>41831270S</ID-Player>
-    <Rounds>5</Rounds>
-    <Average-Bet>7.800</Average-Bet>
+    <Rounds>6</Rounds>
+    <Average-Bet>5.500</Average-Bet>
     <Rounds-Won>0</Rounds-Won>
     <Win-Percentage>0.000</Win-Percentage>
   </Fila>
   <Fila>
-    <ID-Game>6</ID-Game>
-    <ID-Player>86026754S</ID-Player>
-    <Rounds>5</Rounds>
-    <Average-Bet>0.000</Average-Bet>
+    <ID-Game>8</ID-Game>
+    <ID-Player>14427668Q</ID-Player>
+    <Rounds>6</Rounds>
+    <Average-Bet>3.333</Average-Bet>
+    <Rounds-Won>0</Rounds-Won>
+    <Win-Percentage>0.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>8</ID-Game>
+    <ID-Player>33337777C</ID-Player>
+    <Rounds>6</Rounds>
+    <Average-Bet>11.500</Average-Bet>
+    <Rounds-Won>2</Rounds-Won>
+    <Win-Percentage>33.333</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>8</ID-Game>
+    <ID-Player>41831270S</ID-Player>
+    <Rounds>6</Rounds>
+    <Average-Bet>3.333</Average-Bet>
+    <Rounds-Won>0</Rounds-Won>
+    <Win-Percentage>0.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>8</ID-Game>
+    <ID-Player>53581599M</ID-Player>
+    <Rounds>6</Rounds>
+    <Average-Bet>7.000</Average-Bet>
+    <Rounds-Won>0</Rounds-Won>
+    <Win-Percentage>0.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>8</ID-Game>
+    <ID-Player>75045268B</ID-Player>
+    <Rounds>6</Rounds>
+    <Average-Bet>2.167</Average-Bet>
+    <Rounds-Won>4</Rounds-Won>
+    <Win-Percentage>66.667</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>9</ID-Game>
+    <ID-Player>09634229M</ID-Player>
+    <Rounds>8</Rounds>
+    <Average-Bet>3.000</Average-Bet>
+    <Rounds-Won>1</Rounds-Won>
+    <Win-Percentage>12.500</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>9</ID-Game>
+    <ID-Player>11115555A</ID-Player>
+    <Rounds>8</Rounds>
+    <Average-Bet>4.250</Average-Bet>
+    <Rounds-Won>0</Rounds-Won>
+    <Win-Percentage>0.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>9</ID-Game>
+    <ID-Player>14427668Q</ID-Player>
+    <Rounds>8</Rounds>
+    <Average-Bet>8.500</Average-Bet>
+    <Rounds-Won>4</Rounds-Won>
+    <Win-Percentage>50.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>9</ID-Game>
+    <ID-Player>53581599M</ID-Player>
+    <Rounds>8</Rounds>
+    <Average-Bet>8.875</Average-Bet>
     <Rounds-Won>3</Rounds-Won>
-    <Win-Percentage>60.000</Win-Percentage>
+    <Win-Percentage>37.500</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>9</ID-Game>
+    <ID-Player>75045268B</ID-Player>
+    <Rounds>8</Rounds>
+    <Average-Bet>0.000</Average-Bet>
+    <Rounds-Won>0</Rounds-Won>
+    <Win-Percentage>0.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>10</ID-Game>
+    <ID-Player>09634229M</ID-Player>
+    <Rounds>9</Rounds>
+    <Average-Bet>1.667</Average-Bet>
+    <Rounds-Won>4</Rounds-Won>
+    <Win-Percentage>44.444</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>10</ID-Game>
+    <ID-Player>41831270S</ID-Player>
+    <Rounds>9</Rounds>
+    <Average-Bet>3.556</Average-Bet>
+    <Rounds-Won>5</Rounds-Won>
+    <Win-Percentage>55.556</Win-Percentage>
   </Fila>
 </Resultados>
