Añadido fotos a programacion.html
También:
- almacenado una partida más y actualizado reports
- cambiado el formato de todas las variables a inglés y snake_case (minúsculas con barra baja)

--- a/Marcas/Reports/bank_players.xml
+++ b/Marcas/Reports/bank_players.xml
@@ -40,4 +40,8 @@
     <ID-Game>10</ID-Game>
     <Users-who-have-been-bank>2</Users-who-have-been-bank>
   </Fila>
+  <Fila>
+    <ID-Game>11</ID-Game>
+    <Users-who-have-been-bank>2</Users-who-have-been-bank>
+  </Fila>
 </Resultados>
