--- a/Marcas/Reports/first_round_avg_bet.xml
+++ b/Marcas/Reports/first_round_avg_bet.xml
@@ -40,4 +40,8 @@
     <ID-Game>10</ID-Game>
     <Average-Bet-Of-First-Round>9.00</Average-Bet-Of-First-Round>
   </Fila>
+  <Fila>
+    <ID-Game>11</ID-Game>
+    <Average-Bet-Of-First-Round>13.33</Average-Bet-Of-First-Round>
+  </Fila>
 </Resultados>
