--- a/Marcas/Reports/game_avg_bet.xml
+++ b/Marcas/Reports/game_avg_bet.xml
@@ -40,4 +40,8 @@
     <ID-Game>10</ID-Game>
     <Average-Bet>5.222</Average-Bet>
   </Fila>
+  <Fila>
+    <ID-Game>11</ID-Game>
+    <Average-Bet>22.944</Average-Bet>
+  </Fila>
 </Resultados>
