--- a/Marcas/Reports/pce_won_rounds_avg_bet.xml
+++ b/Marcas/Reports/pce_won_rounds_avg_bet.xml
@@ -320,4 +320,36 @@
     <Rounds-Won>5</Rounds-Won>
     <Win-Percentage>55.556</Win-Percentage>
   </Fila>
+  <Fila>
+    <ID-Game>11</ID-Game>
+    <ID-Player>11115555A</ID-Player>
+    <Rounds>3</Rounds>
+    <Average-Bet>23.667</Average-Bet>
+    <Rounds-Won>2</Rounds-Won>
+    <Win-Percentage>66.667</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>11</ID-Game>
+    <ID-Player>22226666B</ID-Player>
+    <Rounds>3</Rounds>
+    <Average-Bet>0.000</Average-Bet>
+    <Rounds-Won>0</Rounds-Won>
+    <Win-Percentage>0.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>11</ID-Game>
+    <ID-Player>53581599M</ID-Player>
+    <Rounds>3</Rounds>
+    <Average-Bet>6.667</Average-Bet>
+    <Rounds-Won>0</Rounds-Won>
+    <Win-Percentage>0.000</Win-Percentage>
+  </Fila>
+  <Fila>
+    <ID-Game>11</ID-Game>
+    <ID-Player>75045268B</ID-Player>
+    <Rounds>3</Rounds>
+    <Average-Bet>6.333</Average-Bet>
+    <Rounds-Won>2</Rounds-Won>
+    <Win-Percentage>66.667</Win-Percentage>
+  </Fila>
 </Resultados>
