--- a/Marcas/Reports/last_round_avg_bet.xml
+++ b/Marcas/Reports/last_round_avg_bet.xml
@@ -40,4 +40,8 @@
     <ID-Game>10</ID-Game>
     <Average-Bet-Of-Last-Round>2.00</Average-Bet-Of-Last-Round>
   </Fila>
+  <Fila>
+    <ID-Game>11</ID-Game>
+    <Average-Bet-Of-Last-Round>41.00</Average-Bet-Of-Last-Round>
+  </Fila>
 </Resultados>
