--- a/Marcas/programacion.css
+++ b/Marcas/programacion.css
@@ -28,6 +28,15 @@ main > ul > li {
     margin-top: 12px;
 }
 
+main div:has(> img) {
+    display: flex;
+    justify-content: center;
+    & > img {
+        width: 90%;
+        max-width: 600px;
+    };
+}
+
 ol > li {
     font-size: 24px;
     margin-left: 32px;
